Added schema and RTK endpoint for getMe
