# backend/docs/openapi.yml
@@ -30,6 +30,19 @@ components:
                 format: uuid
               name:
                 type: string
+    meResponse:
+      type: object
+      properties:
+          email:
+            type: string
+          firstname:
+            type: string
+          gsub:
+            type: string
+          picture: 
+            type: string | null;
+          surname: 
+            type: string;
     loginCredentialsRequest:
       type: object
       properties: 
@@ -121,6 +134,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/diagramsListResponse"
+
+        '401':
+          description: Authentication required
+
+  /users/me:
+    get:
+      tags: 
+        -  Users
+      summary: Get user data from the current session
+      security:
+        - sessionCookie: []
+      responses:
+        '200':
+          description: OK - user data retrieved
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/meResponse"
 
         '401':
           description: Authentication required
